# re-quest

./: .gitignore  messages.py  messages_read.py
tools/agi/: config.py  import_all.py  installer.nsi  messages_export.py  messages_import.py  object_export.py  words_export.py  words_import.py
tools/sci/: compile.bat  gooey_misc.py  import_all.py  messages_export.py  messages_import.py  sounder.nsi  sounder.py  tradusci_export.py  tradusci_import.py  vocab_export.py  vocab_import.py
tools/sci-old-mess/: fonts.py
tools/sci/assembler/asm_lib/: misc.py
tools/sci/misc/: fontlib.py  sounder.gfie  sounder_empty.gfie  view_export.py  view_import_to_images.py
tools/sci/resource_archive/: codec.py  compression.py  loader.py  sci0_resource.py  sci1_resource.py  sci_resource.py
tools/sci/sounder/: compile.bat  digital.py  gooey_misc.py  midi.py  pyproject.toml  readme.md  sci0.py  sci1.py  sci_common.py  sounder.nsi  sounder.py  sounder.spec  usage.html  utils.py
tools/sci/sounder/sound_patch/: export_sound_patch.py  import_sound_patch.py  patch_objects.py
tools/sci/sounder/tests/: .gitignore  test_export_sound_patch.py  test_sounder.py
tools/sci/sounder/tests/patch_files/cb1/: patch.003
tools/sci/sounder/tests/patch_files/eq1cd/: 3.pat
tools/sci/sounder/tests/patch_files/sq3/: patch.003
tools/sci/tests/: test_sounder.py
